2010-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-wash-tags, gnus-html-put-image): Mark cid and
	internal images as deletable by `W D D'.

	* gnus-async.el (gnus-html-prefetch-images): Autoload it when compiling.
	(gnus-async-article-callback): Fix typo.

2010-09-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-wash-tags): Limit end-tag matching to the
	current line to work around bugs in the output from w3m.

	* gnus-async.el (gnus-async-article-callback): Always prefetch images
	for groups that want that.

	* nntp.el (nntp-wait-for-string): Supply a timeout for
	accept-process-output to ensure progress.

	* gnus-start.el (gnus-get-unread-articles): If being given an explicit
	level to get unread articles from, then use that for foreign groups,
	too.

	* gnus-html.el (gnus-html-wash-tags): Remove <a name...> tags, which
	confuses the rest of the function.

	* gnus-start.el (gnus-read-active-for-groups): Do a `gnus-request-scan'
	for the methods that support -retrieve-groups, too.

	* nnml.el (nnml-save-nov): Remove some debugging-related messages.

2010-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pop3.el: Require cl when compiling.
	(pop3-number-of-responses): Search for "+OK", not "+OK ".

2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-get-unread-articles): Don't bother with groups
	that aren't going to be activated.
	(gnus-get-unread-articles): Fix up the last commit.

	* gnus-html.el (gnus-article-html): Allow calling without specifying
	the handle.  In that case, dissect the buffer first.

	* gnus-sum.el (gnus-set-mode-line): Don't pad the mode line string.

	* nnimap.el (nnimap-open-connection): Revert the change that would look
	into authinfo for imaps instead of imap.

	* gnus-start.el (gnus-activate-group): Take an optional parameter to
	say that you don't want to call gnus-request-group with don-check, but
	do check the reponse.  This is for virtual groups only.